[package]
name = "raymarch"
version = "0.1.0"
edition = "2024"  # 2021

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
enum-map = "2.7.3"
env_logger = "0.11.6"
num-traits = "0.2.19"
pollster = "0.4"
wgpu = "27.0.1"
winit = { version = "0.30.8", features = ["android-native-activity"] }
